--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "django>=5.2.5",
     "djangorestframework>=3.15.2",
+    "gunicorn",
 ]
 
 [project.optional-dependencies]
