--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "dj-database-url>=3.0.1",
     "django>=5.2.5",
     "djangorestframework>=3.15.2",
     "gunicorn",
@@ -27,3 +28,8 @@ extend-ignore = ["E501"]  # 줄 길이 제한 무시
 line-length = 88          # 최대 줄 길이
 exclude = ["migrations", "venv"]  # 린트에서 제외할 폴더
 select = ["F", "E", "W"]  # 체크할 규칙 종류
+
+[dependency-groups]
+dev = [
+    "pre-commit>=4.3.0",
+]
