--- a/.github/workflows/ci-cd-full.yml
+++ b/.github/workflows/ci-cd-full.yml
@@ -66,6 +66,13 @@ jobs:
       - name: Run isort
         run: uv run isort --check-only .
 
+      # Django 준비 확인
+      - name: Wait for DB
+        run: uv run python manage.py wait_for_db
+        env:
+          DATABASE_URL: postgres://postgres:postgres@localhost:5432/testdb
+
+
       # Django 마이그레이션
       - name: Django Migrations
         env:
