--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,22 +3,30 @@ repos:
     rev: v0.12.10   # 원하는 버전
     hooks:
       - id: ruff
-        args: [--fix]
+        args:
+          - --fix
+          - --extend-ignore=E501  # 줄 길이 제한 무시
+          - --line-length=120  # 최대 줄 길이
+          - --exclude=migrations,venv  # 린트에서 제외할 폴더
+          - --select=F,E,W  # 체크할 규칙 종류
 
   - repo: https://github.com/psf/black
     rev: 25.1.0
     hooks:
       - id: black
+        args: [--line-length=120]
 
   - repo: https://github.com/PyCQA/isort
     rev: 6.0.1
     hooks:
       - id: isort
+        args: [--line-length=120]
 
   - repo: https://github.com/pycqa/flake8
     rev: 7.3.0
     hooks:
       - id: flake8
+        args: [--max-line-length=120]
 
   - repo: https://github.com/myint/autoflake
     rev: v2.3.1
