--- a/.github/workflows/ci-cd-full.yml
+++ b/.github/workflows/ci-cd-full.yml
@@ -36,6 +36,12 @@ jobs:
         with:
           python-version: '3.12'
 
+      - name: Install dependencies
+        run: |
+          uv venv
+          source .venv/bin/activate
+          uv pip install .[dev]
+          
       # uv 캐시
       - name: Cache uv
         uses: actions/cache@v3
@@ -44,7 +50,7 @@ jobs:
           key: ${{ runner.os }}-uv-${{ hashFiles('**/uv.lock') }}
           restore-keys: |
             ${{ runner.os }}-uv-
-
+            
       # uv 설치
       - name: Install uv
         run: |
