Add diagnostic step for wait_for_db import

--- a/.github/workflows/ci-cd-full.yml
+++ b/.github/workflows/ci-cd-full.yml
@@ -68,6 +68,9 @@ jobs:
       
 
       # Django 준비 확인
+      - name: Diagnose wait_for_db import
+        run: uv run python -c "import core.management.commands.wait_for_db"
+
       - name: Check manage.py commands
         run: uv run python manage.py help
 
