--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "djangorestframework>=3.15.2",
     "gunicorn",
     "pre-commit>=4.3.0",
+    "psycopg2-binary",
 ]
 
 [project.optional-dependencies]
