--- a/.github/workflows/ci-cd-full.yml
+++ b/.github/workflows/ci-cd-full.yml
@@ -69,10 +69,17 @@ jobs:
 
       # Django 준비 확인
       - name: Wait for DB
-        run: uv run python manage.py wait_for_db
+        run: |
+          for i in $(seq 1 10); do
+            if pg_isready -h localhost -p 5432 -U postgres -d testdb; then
+              echo "PostgreSQL is ready!"
+              break
+            fi
+            echo "Waiting for PostgreSQL... ($i/10)"
+            sleep 1
+          done
         env:
           DATABASE_URL: postgres://postgres:postgres@localhost:5432/testdb
-          DJANGO_SETTINGS_MODULE: config.settings.dev
 
 
       # Django 마이그레이션
