Fix: YAML syntax error at line 72 in ci-cd-full.yml

--- a/.github/workflows/ci-cd-full.yml
+++ b/.github/workflows/ci-cd-full.yml
@@ -69,7 +69,8 @@ jobs:
 
       # Django 준비 확인
       - name: Wait for DB
-        run: |          python -c "import os, time; from django.db import connections; from django.db.utils import OperationalError; os.environ.setdefault('DJANGO_SETTINGS_MODULE', 'config.settings.dev'); import django; django.setup(); db_conn = None; retries = 0; max_retries = 10; while not db_conn and retries < max_retries: try: connections['default'].cursor(); print('PostgreSQL is ready!'); break; except OperationalError: retries += 1; print(f'Waiting for PostgreSQL... ({retries}/{max_retries})'); time.sleep(1); if retries == max_retries: print('PostgreSQL connection failed after multiple attempts.'); exit(1)"
+        run: |
+          python -c "import os, time; from django.db import connections; from django.db.utils import OperationalError; os.environ.setdefault('DJANGO_SETTINGS_MODULE', 'config.settings.dev'); import django; django.setup(); db_conn = None; retries = 0; max_retries = 10; while not db_conn and retries < max_retries: try: connections['default'].cursor(); print('PostgreSQL is ready!'); break; except OperationalError: retries += 1; print(f'Waiting for PostgreSQL... ({retries}/{max_retries})'); time.sleep(1); if retries == max_retries: print('PostgreSQL connection failed after multiple attempts.'); exit(1)"
 
 
       # Django 마이그레이션
