Fix: Explicitly install coverage in CI workflow

--- a/.github/workflows/ci-cd-full.yml
+++ b/.github/workflows/ci-cd-full.yml
@@ -91,6 +91,9 @@ jobs:
           DATABASE_URL=${{ env.DATABASE_URL }} uv run python manage.py migrate --settings=config.settings.dev
 
       # Django Tests + Coverage
+      - name: Install Coverage
+        run: uv pip install coverage
+
       - name: Run Django Tests with Coverage
         env:
           DATABASE_URL: postgres://postgres:postgres@localhost:5432/testdb
