--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -17,7 +17,8 @@ services:
 
   web:
     build: .
-    command: /scripts/run.sh
+    
+    working_dir: /app
     env_file:
       - .env
     ports:
