--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,14 +1,14 @@
 repos:
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.12.10   # 원하는 버전
+    rev: v0.12.10
     hooks:
       - id: ruff
         args:
           - --fix
-                    - --extend-ignore=E501,F403  # 줄 길이 제한 무시, 와일드카드 임포트 무시
-          - --line-length=120  # 최대 줄 길이
-          - --exclude=migrations,venv  # 린트에서 제외할 폴더
-          - --select=F,E,W  # 체크할 규칙 종류
+          - --extend-ignore=E501,F403
+          - --line-length=120
+          - --exclude=migrations,venv
+          - --select=F,E,W
 
 
 
