--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,6 +9,7 @@ repos:
           - --line-length=120
           - --exclude=migrations,venv
           - --select=F,E,W  # 코드 스타일 및 오류 체크만
+          - --ignore=F405
 
   - repo: https://github.com/psf/black
     rev: 25.1.0
@@ -26,7 +27,7 @@ repos:
     rev: 7.3.0
     hooks:
       - id: flake8
-        args: [--max-line-length=120]
+        args: [--max-line-length=120, "--ignore=F401,F403,F405"]
 
   - repo: https://github.com/myint/autoflake
     rev: v2.3.1
