--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ dependencies = [
     "pre-commit>=4.3.0",
     "psycopg2-binary",
     "django-filter>=24.2",
+    "django-allauth",
+    "requests",
+    "cryptography",
 ]
 
 [project.optional-dependencies]
