--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,5 +34,6 @@ packages = ["apps", "config", "core"]
 
 [dependency-groups]
 dev = [
+    "django-debug-toolbar>=6.0.0",
     "pre-commit>=4.3.0",
 ]
