--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ dependencies = [
     "django-allauth",
     "requests",
     "cryptography",
+    "transformers",
+    "torch",
 ]
 
 [project.optional-dependencies]
@@ -27,13 +29,8 @@ dev = [
     "isort>=6.0.1",
     "coverage",
     "djangorestframework-simplejwt",
+    "django-debug-toolbar>=6.0.0",
 ]
 
 [tool.setuptools]
 packages = ["apps", "config", "core"]
-
-[dependency-groups]
-dev = [
-    "django-debug-toolbar>=6.0.0",
-    "pre-commit>=4.3.0",
-]
