feat: 소비 리포트 기능 개선 및 UX/UI 향상
이 업데이트는 소비 리포트 기능의 안정성과 사용자 경험을 크게 개선합니다.

주요 개선 사항:
- 사용자별 리포트 생성 및 표시: `apps/analysis/tasks.py` 수정 (사용자별 필터링, `json_data` 저장, 날짜 처리 개선, ORM 기반 집계).
- UX/UI 개선: 차트 유형 파이 차트로 변경, 대시보드 디자인 일관성 유지, 버튼 스타일링, 리포트 목록 가독성 향상.

해결된 주요 오류:
- `ModuleNotFoundError: No module named allauth_test_project` (PYTHONPATH 설정으로 해결)
- `AttributeError: SpendingReport object has no attribute get_image_url` (`views.py` 수정으로 해결)
- `SyntaxError: "[object Object]" is not valid JSON` (JS `JSON.parse()` 제거로 해결)
- 차트 "무한 스크롤" 현상 (캔버스 높이 제한으로 해결)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,11 @@ dependencies = [
     "cryptography",
     "transformers",
     "torch",
+    "pandas",
+    "matplotlib",
+    "celery",
+    "redis",
+    "django-celery-beat",
 ]
 
 [project.optional-dependencies]
