Fix: Resolve app service DB connection issue in Docker Compose

--- a/.github/workflows/ci-cd-full.yml
+++ b/.github/workflows/ci-cd-full.yml
@@ -71,7 +71,7 @@ jobs:
       - name: Wait for DB
         run: |
           for i in $(seq 1 10); do
-            if pg_isready -h localhost -p 5432 -U postgres -d testdb; then
+            if pg_isready -h localhost -p 5432 -U viral_marketing_user -d testdb; then
               echo "PostgreSQL is ready!"
               break
             fi
