--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -19,6 +19,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    env_file:
+      - .env
     command: >
       sh -c "python manage.py wait_for_db && 
              python manage.py migrate && 
