--- a/.github/workflows/ci-cd-full.yml
+++ b/.github/workflows/ci-cd-full.yml
@@ -39,13 +39,13 @@ jobs:
       
           
       # uv 캐시
-      - name: Cache uv
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/uv
-          key: ${{ runner.os }}-uv-${{ hashFiles('**/uv.lock') }}-v2
-          restore-keys: |
-            ${{ runner.os }}-uv-
+      # - name: Cache uv
+      #   uses: actions/cache@v3
+      #   with:
+      #     path: ~/.cache/uv
+      #     key: ${{ runner.os }}-uv-${{ hashFiles('**/uv.lock') }}-v2
+      #     restore-keys: |
+      #       ${{ runner.os }}-uv-
             
       # uv 설치
       - name: Install uv
