--- a/.github/workflows/ci-cd-full.yml
+++ b/.github/workflows/ci-cd-full.yml
@@ -57,9 +57,7 @@ jobs:
       # 의존성 설치
       - name: Install dependencies
         run: |
-          uv venv
-          source .venv/bin/activate
-          uv pip install .[dev]
+          uv pip install .[dev] # uv가 자체적으로 가상 환경을 관리하도록 변경
 
       # Lint (Ruff, Black, isort)
       - name: Run Ruff
